--- a/app/src/main/res/layout/activity_pasajero_map.xml
+++ b/app/src/main/res/layout/activity_pasajero_map.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ConductorMapAcrivity" >
+    tools:context=".PasajeroLoginActivity" >
 
     <Button
         android:layout_width="wrap_content"
@@ -15,12 +15,22 @@
         android:text="logout" />
 
 
-<fragment
+    <fragment
 
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="llamar conductor"
+        android:id="@+id/request"
+        android:layout_gravity="bottom"
+
+        />
 
 
 </FrameLayout>
