--- a/app/src/main/res/layout/activity_pasajero_map.xml
+++ b/app/src/main/res/layout/activity_pasajero_map.xml
@@ -13,7 +13,12 @@
         android:layout_height="wrap_content"
         android:id="@+id/logout"
         android:text="logout" />
-
+    <Button
+        android:layout_gravity="right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/settings"
+        android:text="User" />
 
     <fragment
 
