--- a/app/src/main/res/layout/activity_conductor_map_acrivity.xml
+++ b/app/src/main/res/layout/activity_conductor_map_acrivity.xml
@@ -22,5 +22,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/pasajeroInfo"
+        android:layout_gravity="bottom"
+        android:orientation="vertical"
+        android:background="@android:color/white"
+        android:visibility="gone">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/pasajeroName"
+            android:paddingBottom="10sp"
+            android:paddingTop="20sp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/pasajeroPhone"
+            android:paddingBottom="10sp"
+            android:paddingTop="20sp"/>
+    </LinearLayout>
+
 
 </FrameLayout>
