--- a/app/src/main/res/layout/activity_conductor_map_acrivity.xml
+++ b/app/src/main/res/layout/activity_conductor_map_acrivity.xml
@@ -33,6 +33,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/pasajeroDestination"
+            android:paddingBottom="10sp"
+            android:text="Destino: --"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/pasajeroName"
             android:paddingBottom="10sp"
             android:paddingTop="20sp"/>
