--- a/app/src/main/res/layout/activity_conductor_map_acrivity.xml
+++ b/app/src/main/res/layout/activity_conductor_map_acrivity.xml
@@ -1,54 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ConductorMapAcrivity" >
+    tools:context=".ConductorMapAcrivity">
 
     <Button
+        android:id="@+id/logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/logout"
         android:text="logout" />
 
 
-<fragment
+    <fragment
 
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <LinearLayout
+        android:id="@+id/pasajeroInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/pasajeroInfo"
         android:layout_gravity="bottom"
-        android:orientation="vertical"
         android:background="@android:color/white"
+        android:orientation="vertical"
         android:visibility="gone">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/pasajeroDestination"
-            android:paddingBottom="10sp"
-            android:text="Destino: --"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/pasajeroName"
-            android:paddingBottom="10sp"
-            android:paddingTop="20sp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/pasajeroPhone"
-            android:paddingBottom="10sp"
-            android:paddingTop="20sp"/>
-    </LinearLayout>
 
+        <TextView
+            android:id="@+id/pasajeroDestination"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10sp"
+            android:text="Destino: --" />
+
+        <TextView
+            android:id="@+id/pasajeroName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="20sp"
+            android:paddingBottom="10sp" />
+
+        <TextView
+            android:id="@+id/pasajeroPhone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="20sp"
+            android:paddingBottom="10sp" />
+
+        <Button
+            android:id="@+id/rideStatus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Iniciar viaje" />
+    </LinearLayout>
 
 </FrameLayout>
