--- a/app/src/main/res/layout/activity_pasajero_map.xml
+++ b/app/src/main/res/layout/activity_pasajero_map.xml
@@ -40,8 +40,8 @@
             <fragment android:id="@+id/autocomplete_fragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
-                />
+                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"/>
+<!--                    "com.google.android.libraries.places.widget.AutocompleteSupportFragment"-->
         </androidx.cardview.widget.CardView>
     </RelativeLayout>
 
