--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -20,5 +20,6 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAa66qreGPji58op42F7_ufelBteQxWarg</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBgjYiRuBCD0A2TX03T4kU_kZBb567gDWQ</string>
+<!--    AIzaSyAa66qreGPji58op42F7_ufelBteQxWarg</string>-->
 </resources>
